--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "bootstrap": "^4.1.1",
     "classnames": "^2.2.5",
     "dateformat": "^3.0.3",
     "download-csv": "^1.1.1",
